--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -21,3 +21,7 @@
 .van-tabs--line .van-tabs__wrap {
   border-radius: 10px !important;
 }
+
+#app {
+  padding-bottom: env(safe-area-inset-bottom);
+}
