--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -18,6 +18,10 @@
   --van-cell-horizontal-padding: 10px !important;
 }
 
+#app {
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
 .van-tabs--line .van-tabs__wrap {
   border-radius: 10px !important;
 }
